Updated folder structure

--- a/notebooks/flood_pred_LSTM_ts.ipynb
+++ b/notebooks/flood_pred_LSTM_ts.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 1,
    "id": "080fd6b4",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "1bae3601",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "97575969",
    "metadata": {},
    "outputs": [
@@ -91,19 +91,19 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rainfall_data = pd.read_csv(\"rainfall history_data.csv\")\n",
+    "rainfall_data = pd.read_csv(\"../data/rainfall history_data.csv\")\n",
     "rainfall_data.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "1d27c73b",
    "metadata": {},
    "outputs": [
@@ -126,13 +126,13 @@
     }
    ],
    "source": [
-    "river_level = pd.read_csv(\"blackadder-water-river level.csv\")\n",
+    "river_level = pd.read_csv(\"../data/blackadder-water-river level.csv\")\n",
     "river_level.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "96fdc29a",
    "metadata": {},
    "outputs": [
@@ -153,7 +153,7 @@
     }
    ],
    "source": [
-    "river_flow_rate = pd.read_csv(\"blackadder-water guage daily flow.csv\", header=20, names = ['date', 'flowrate'])\n",
+    "river_flow_rate = pd.read_csv(\"../data/blackadder-water guage daily flow.csv\", header=20, names = ['date', 'flowrate'])\n",
     "river_flow_rate.info()"
    ]
   },
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "92c76b22",
    "metadata": {},
    "outputs": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c6839996",
    "metadata": {},
    "outputs": [
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "13f61481",
    "metadata": {},
    "outputs": [
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "ad21c75d",
    "metadata": {},
    "outputs": [
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "bb5ae61f",
    "metadata": {},
    "outputs": [
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "18c745b0",
    "metadata": {},
    "outputs": [
@@ -873,11 +873,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6dbd2fd1",
    "metadata": {},
    "source": [
-    "###### Rainfall Data feature engineering"
+    "#### Rainfall Data feature engineering"
    ]
   },
   {
@@ -898,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "2d2d1f47",
    "metadata": {},
    "outputs": [
@@ -919,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "ffcb6fb2",
    "metadata": {},
    "outputs": [
@@ -940,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "892cb6a2",
    "metadata": {},
    "outputs": [
@@ -970,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "9a90dde7",
    "metadata": {},
    "outputs": [],
@@ -981,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "8659bb31",
    "metadata": {},
    "outputs": [
@@ -1019,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "cfec4cf2",
    "metadata": {},
    "outputs": [],
@@ -1030,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "af2441df",
    "metadata": {},
    "outputs": [
@@ -1064,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "3d77c065",
    "metadata": {},
    "outputs": [
@@ -1261,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "77947155",
    "metadata": {},
    "outputs": [
@@ -1558,7 +1559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "81199937",
    "metadata": {
     "scrolled": true
@@ -1597,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "87fe2a55",
    "metadata": {},
    "outputs": [
@@ -1618,7 +1619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "feabc915",
    "metadata": {
     "scrolled": true
@@ -1643,7 +1644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "854a016a",
    "metadata": {},
    "outputs": [
@@ -1680,7 +1681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "8ce02d63",
    "metadata": {},
    "outputs": [],
@@ -1691,7 +1692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "86257643",
    "metadata": {},
    "outputs": [
@@ -1725,7 +1726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "5389c407",
    "metadata": {},
    "outputs": [
@@ -2120,7 +2121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "368f20f7",
    "metadata": {},
    "outputs": [
@@ -2262,7 +2263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "b39852cd",
    "metadata": {},
    "outputs": [
@@ -2290,7 +2291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "93f81ee4",
    "metadata": {
     "scrolled": true
@@ -2406,7 +2407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "641c151f",
    "metadata": {
     "scrolled": true
@@ -2449,7 +2450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "5f2d07b8",
    "metadata": {},
    "outputs": [
@@ -2567,7 +2568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "5267d03b",
    "metadata": {},
    "outputs": [
@@ -2593,7 +2594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "a667e941",
    "metadata": {},
    "outputs": [
@@ -2681,7 +2682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "c2c42998",
    "metadata": {},
    "outputs": [
@@ -2720,7 +2721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "8e66558f",
    "metadata": {},
    "outputs": [
@@ -2937,7 +2938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "3b4b6d20",
    "metadata": {},
    "outputs": [],
@@ -2948,7 +2949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "2f8c4b8a",
    "metadata": {},
    "outputs": [],
@@ -2960,7 +2961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "2264a63d",
    "metadata": {},
    "outputs": [
@@ -3355,7 +3356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "d1548edb",
    "metadata": {},
    "outputs": [],
@@ -3366,7 +3367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "da60376d",
    "metadata": {},
    "outputs": [],
@@ -3376,7 +3377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "9ad14ad2",
    "metadata": {},
    "outputs": [
@@ -3795,7 +3796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "c94efa00",
    "metadata": {},
    "outputs": [],
@@ -3805,7 +3806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "16a9c66d",
    "metadata": {},
    "outputs": [
@@ -3858,7 +3859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "cb1d7f38",
    "metadata": {},
    "outputs": [],
@@ -3869,7 +3870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "eebc2619",
    "metadata": {},
    "outputs": [
@@ -3914,7 +3915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "3e5d13b0",
    "metadata": {},
    "outputs": [],
@@ -3932,7 +3933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "0e27a088",
    "metadata": {
     "scrolled": false
@@ -3993,7 +3994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "037618f7",
    "metadata": {},
    "outputs": [],
@@ -4003,7 +4004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "2c4c36a3",
    "metadata": {},
    "outputs": [],
@@ -4015,7 +4016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "1fcf768a",
    "metadata": {},
    "outputs": [
@@ -4047,7 +4048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "d240ff5d",
    "metadata": {},
    "outputs": [
@@ -4082,7 +4083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "a4526cf8",
    "metadata": {},
    "outputs": [],
@@ -4120,7 +4121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "512f0a1a",
    "metadata": {},
    "outputs": [],
@@ -4136,7 +4137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "e9f27bbc",
    "metadata": {},
    "outputs": [
@@ -4157,7 +4158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "b147d3d8",
    "metadata": {},
    "outputs": [
@@ -4192,7 +4193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "9518e6ea",
    "metadata": {},
    "outputs": [
@@ -4256,7 +4257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "id": "394705c5",
    "metadata": {
     "scrolled": true
@@ -4297,7 +4298,7 @@
    "outputs": [],
    "source": [
     "# # Save model\n",
-    "# joblib.dump(history.history, 'model_history.pkl')\n",
+    "# joblib.dump(history.history, '../model/model_history.pkl')\n",
     "\n",
     "# model.save('model.h5')"
    ]
@@ -4310,7 +4311,7 @@
    "outputs": [],
    "source": [
     "# Load model\n",
-    "model = load_model('model.h5')"
+    "model = load_model('../model/model.h5')"
    ]
   },
   {
@@ -4323,7 +4324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "id": "eeebeede",
    "metadata": {},
    "outputs": [],
@@ -4342,7 +4343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "id": "679db152",
    "metadata": {},
    "outputs": [],
@@ -4356,7 +4357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "id": "a916c311",
    "metadata": {
     "scrolled": true
@@ -4379,7 +4380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "id": "9a4b5278",
    "metadata": {},
    "outputs": [],
@@ -4390,7 +4391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "id": "e38698fe",
    "metadata": {},
    "outputs": [],
@@ -4400,7 +4401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "id": "764420f0",
    "metadata": {},
    "outputs": [],
@@ -4414,7 +4415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "id": "5640139c",
    "metadata": {},
    "outputs": [
@@ -4435,7 +4436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "id": "2592530b",
    "metadata": {},
    "outputs": [
@@ -4456,7 +4457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "id": "183f1488",
    "metadata": {},
    "outputs": [],
@@ -4468,7 +4469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
    "id": "5f71fefe",
    "metadata": {},
    "outputs": [
@@ -4500,7 +4501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "id": "f88eea1c",
    "metadata": {},
    "outputs": [
@@ -4546,7 +4547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "id": "cd32b80d",
    "metadata": {},
    "outputs": [],
@@ -4572,7 +4573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "id": "36c0fa03",
    "metadata": {},
    "outputs": [
@@ -4625,7 +4626,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
